--- a/src/css/header.css
+++ b/src/css/header.css
@@ -42,3 +42,68 @@
 .nav-link.active::after {
   background: #747bff;
 }
+
+/* Gallery */
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 0 auto;
+  gap: 24px;
+  row-gap: 20px;
+}
+
+.gallery-list {
+  width: calc((100% - 48px)/ 3);
+}
+
+.gallery-link {
+  text-decoration: none;
+}
+
+.gallery-image {
+  width: 100%;
+  height: auto;
+  display: block;
+
+  width: 360px;
+  height: 200px;
+}
+
+.gallery-image:hover {
+  transform: scale(1.05);
+}
+
+
+/* Form */
+
+.feedback-form {
+  width: 408px;
+  height: 296px;
+
+  padding: 24px;
+}
+
+.input {
+  width: 100%;
+  height: 39px;
+  border-radius: 5px;
+}
+
+.textarea {
+  width: 100%;
+  height: 79px;
+  border-radius: 5px;
+}
+
+.button {
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 95px;
+  height: 40px;
+
+  background: #4e75ff;
+  border: none;
+  color: aliceblue;
+}
